# snap

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SETUP.md  setup-mcp.sh  snap-trigger.sh  snap.plist  snap.service
app/: package-lock.json  package.json
app/src/: export-scale.mjs  export-scale.test.mjs  index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: README.md
app/src-tauri/src/: lib.rs  main.rs
mcp-server/: pyproject.toml  server.py
mcp-server/tests/: test_inline_image_data.py
tasks/: CROSS-PLATFORM-SUPPORT.md  MUTLI-CLIENT-SUPPORT.md
tasks/ARCHIVE/: 00-PLAN.md  01-scaffold-tauri.md  02-drawing-tools.md  02b-rect-and-polish.md  03-screen-capture.md  04-save-handler.md  05-window-context.md  06-global-hotkey.md  06b-autostart.md  07-mcp-server.md  07b-inbox-watcher.md  08-integration-test.md  09-claude-md-integration.md  10-error-handling.md  11-readme-packaging.md
