[project]
name = "snap-server"
version = "0.1.0"
description = "MCP server for screen annotation inbox. Feeds annotated screenshots to Claude Code."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["fastmcp>=2.0.0"]

[project.scripts]
snap = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
